--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.chumazkiyway.weather">
 
-    <!--
-         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but you must specify either coarse or fine
-         cityName permissions for the 'MyLocation' functionality.
-    -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -23,8 +18,10 @@
                 android:value="@string/google_maps_key"/>
 
         <activity
-                android:name=".views.MapsActivity"
-                android:label="">
+                android:name=".views.MapsActivity">
+        </activity>
+        <activity
+                android:name=".views.SearchActivity">
         </activity>
         <activity android:name=".views.MainActivity">
             <intent-filter>
